infra/instance-cfn.yml
Parameters:
  ApplicationName:
    Type: String
    Description: Application Name
  KeyName:
    Type: String
    Description: Key Name
  AmiId:
    Type: AWS::EC2::Image::Id
    Description: Ami Id
  Environment:
    Type: String
    Description: Environment (staging, prod, ...)
  NetworkStackName:
    Type: String
    Description: Networking Stack Name
  SubnetName:
    Type: String
    Description: Subnet Name

Resources:
  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ec2 security group
      VpcId:
        Fn::ImportValue: !Sub '${NetworkStackName}::VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref Ec2SecurityGroup
      IamInstanceProfile: !Ref Ec2InstanceProfile
      SubnetId:
        Fn::ImportValue: !Sub '${NetworkStackName}::${SubnetName}'
      Tags:
        - Key: Name
          Value: !Sub '${ApplicationName}-${Environment}-instance'
        - Key: Application
          Value: !Sub '${ApplicationName}'
        - Key: Environment
          Value: !Sub '${Environment}'
  Ec2InstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - Ref: Ec2InstanceRole
  Ec2InstanceRole:
    Type: 'AWS::IAM::Role'
    Description: IAM role for !Ref ApplicationName EC2 instance profile
    Properties:
      RoleName: !Join
        - '-'
        - - !Ref ApplicationName
          - !Sub '${Environment}-ec2-instance-role'
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
Outputs:
  InstanceDns:
    Value: !GetAtt
      - Ec2Instance
      - PrivateDnsName
    Export:
      Name: !Sub '${AWS::StackName}::InstancePrivateDns'
